--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Webpage</title>
-        <link rel="stylesheet" href="../web_page/style/style.css">
+        <link rel="stylesheet" href="../style/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
          integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
          crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -134,7 +134,7 @@
             </div>
         </section>
         <div class="toTop">
-            <a href="#"><img src="../web_page/imgs/Arrow-down.svg"></a>
+            <a href="#"><img src="../imgs/Arrow-down.svg"></a>
         </div>
         
     </body>
