--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="boxImg">
                 <div class="imgWrap">
-                    <img src = '../web_page/imgs/me.JPG'>
+                    <img src = '../imgs/me.JPG'>
                 </div>
             </div>
         </div>
