--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../style/ContactStyle.css">
+        <link rel="stylesheet" href="./style/ContactStyle.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
          integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
          crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -11,7 +11,7 @@
         <div class="main" style="height:110vh">
             <nav>
                 <div class="arrow">
-                    <a href="index.html"><img src = '../imgs/Arrow-down.svg'></a>
+                    <a href="index.html"><img src = './imgs/Arrow-down.svg'></a>
                 </div>
                 <ul>
                     <li><a href="index.html#about">About Me</a></li>
@@ -40,11 +40,11 @@
                     </form>
                 </div>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js" integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-                <script src="../animation/bot.js"></script>
+                <script src="./animation/bot.js"></script>
             </div>
         </div>
         <div class="toTop">
-            <a href="#"><img src="../imgs/Arrow-down.svg"></a>
+            <a href="#"><img src="./imgs/Arrow-down.svg"></a>
         </div>
 
     </body>
